<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/Details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Details"
        android:textAlignment="center"
        android:textColor="@color/black_opacity_87"
        android:padding="8dp"
        android:textSize="20sp"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/PName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/buttonlayout1"
        android:layout_alignStart="@+id/PhnNumber"
        android:layout_below="@+id/Details"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/Fullnam"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EmpCode"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/Details"
        android:layout_below="@+id/PsNum"
        android:layout_marginTop="18dp"
        android:background="@drawable/buttonlayout1"
        android:ems="10"
        android:hint="@string/EmpCode"
        android:inputType="phone" />

    <EditText
        android:id="@+id/PhnNumber"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/PsNum"
        android:layout_below="@+id/PName"
        android:layout_marginTop="17dp"
        android:background="@drawable/buttonlayout1"
        android:ems="10"
        android:hint="@string/PhnNumber"
        android:inputType="phone" />

    <EditText
        android:id="@+id/PsNum"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_alignStart="@+id/EmpCode"
        android:layout_below="@+id/PhnNumber"
        android:layout_marginTop="18dp"
        android:background="@drawable/buttonlayout1"
        android:ems="10"
        android:hint="@string/PsNum"
        android:inputType="phone" />

    <TextView
        android:id="@+id/Opt"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_alignBaseline="@+id/PsNum"
        android:layout_alignBottom="@+id/PsNum"
        android:layout_alignEnd="@+id/PsNum"
        android:text="@string/Opt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/saveinfo"
        android:layout_width="wrap_content"
        android:background="@drawable/buttonlayout"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/Save" />


    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="293dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="65dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Enter OTP" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:text="Verify"
                android:background="@drawable/buttonlayout"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
