<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.university.soa.bus.MainActivity">

    <TextView
        android:id="@+id/seat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/header_text_marginTop"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/header_text"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/linearlayoutmargin"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@color/white"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/CodeNum"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_text_marginTop"
                    android:drawablePadding="@dimen/drawablepadding"
                    android:drawableStart="@drawable/email"
                    android:drawableLeft="@drawable/email"
                    android:hint="@string/CodeNum"
                    android:inputType="phone"
                    android:paddingEnd="@dimen/drawablepadding"
                    android:paddingStart="@dimen/drawablepadding"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/light_blue_500" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/icon_selector"
                app:passwordToggleTint="@color/white"
                app:hintTextAppearance="@color/white"
                android:textColorHint="@color/white">

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/buttonPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/space"
                android:background="@drawable/greenbutton">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/buttonlayout"
                    android:text="@string/manifest_label_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text"
                    android:textStyle="bold"
                    android:onClick="onClick"/>

            </LinearLayout>

         
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:visibility="gone">
        <Button
            android:id="@+id/Tour1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:background="@drawable/buttonlayout"
            android:text="@string/Tour1" />

        <Button
            android:id="@+id/Tour2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/Tour1"
            android:layout_below="@+id/Tour1"
            android:layout_marginTop="27dp"
            android:background="@drawable/buttonlayout"
            android:text="@string/Tour2" />

        <Button
            android:id="@+id/Tour3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/Tour2"
            android:layout_below="@+id/Tour2"
            android:layout_marginTop="28dp"
            android:background="@drawable/buttonlayout"
            android:text="@string/Tour3" />


        <Button
            android:id="@+id/Tour4"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/Tour3"
            android:layout_below="@+id/Tour3"
            android:layout_marginTop="28dp"
            android:background="@drawable/buttonlayout"
            android:text="@string/Tour4" />


        <Button
            android:id="@+id/Tour5"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/Tour4"
            android:layout_below="@+id/Tour4"
            android:layout_marginTop="28dp"
            android:background="@drawable/buttonlayout"
            android:text="@string/Tour5" />
        <Button
            android:id="@+id/Tour6"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/Tour5"
            android:layout_below="@+id/Tour5"
            android:layout_marginTop="28dp"
            android:background="@drawable/buttonlayout"
            android:text="@string/Tour6" />
    </RelativeLayout>


</RelativeLayout>
